--- a/gp_videos.ipynb
+++ b/gp_videos.ipynb
@@ -2,24 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import animation\n",
     "from matplotlib.animation import FuncAnimation\n",
     "import os\n",
+    "import scipy\n",
+    "from jax import numpy as jnp\n",
+    "from time import time \n",
     "\n",
     "from gp_videos import sample_video\n",
     "%load_ext autoreload\n",
@@ -32,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6056,6 +6050,68 @@
     "from IPython.display import HTML\n",
     "HTML(anim.to_html5_video())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a = jnp.eye(70000)\n",
+    "\n",
+    "# t0 = time()\n",
+    "# jnp.linalg.cholesky(a)\n",
+    "# t1 = time()\n",
+    "# print(f\"Jax: {t1-t0:.5f} s\")\n",
+    "\n",
+    "a = np.eye(70000)\n",
+    "t0 = time()\n",
+    "np.linalg.cholesky(a)\n",
+    "t1 = time()\n",
+    "print(f\"Numpy: {t1-t0:.5f} s\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = np.eye(5)\n",
+    "# L = jnp.array(K)\n",
+    "L = jnp.linalg.cholesky(K)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Array([[1., 0., 0., 0., 0.],\n",
+       "       [0., 1., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 1.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
