--- a/gp_videos.ipynb
+++ b/gp_videos.ipynb
@@ -57,8 +57,7 @@
     }
    ],
    "source": [
-    "v = sample_video(0.5,0.5,36,36,6)\n",
-    "v.shape"
+    "v = sample_video(0.5,0.5,36,36,6)"
    ]
   },
   {
